# hnet_smiles

./: README.md  colab_smiles_training.ipynb  generate_smiles.py  train_smiles.py
configs/: hnet_smiles_large.json  hnet_smiles_medium.json  hnet_smiles_small.json
data/: analyze_smiles.py  smiles_dataset.py
datasets/PI1M/: readme.md
original_resources/hnet-github-repo/: pyproject.toml
original_resources/hnet-github-repo/hnet/modules/: mha.py
setup/: README.md  requirements.txt  setup_env.sh
visualizations/: __init__.py  smiles_statistics.json  utils.py  visualize_chunking.py  visualize_stats.py
